--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>PacMen</title>
 
   </head>
-  <body>
+  <body style="background: linear-gradient(to bottom, #6b22c3, #1d81d1);">
 
     <div id='game'>
         <button onclick='makeOne()' width='200' height='30'>Add PacMan</button>
